# Traffic-Control-AI

./: .gitignore  Dockerfile  README.md  __init__.py  agent.py  app.py  client.py  gymnasium_adapter.py  inference.py  models.py  openenv.yaml  pyproject.toml  train.py  visualize.py
graders/: grader.py
server/: Dockerfile  app.py  environment.py  requirements.txt
tasks/: task_easy.py  task_hard.py  task_medium.py
